--- a/Project main.html
+++ b/Project main.html
@@ -19,7 +19,7 @@
 	</section>
 	<section>
 		<h2>Click on any of the wonder</h2>
-		<nav>
+		<nav class="WebContainer">
 			<a href="Projectb.html">Taj Mahal</a>
 			<a href="Projectc.html">Petra</a>
 			<a href="Projectd.html">Colosseum</a>
