--- a/Project main.html
+++ b/Project main.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
 	<meta charset="utf-8">
 	<title>Seven wonders</title>
 	<link rel="stylesheet" href="Wonders.css">
+	<!-- <script src="Wonders.js"></script> -->
 </head>
+
 <body>
+	<!-- <div class="loader">
+		<img src="Loading.gif" alt="Loading">
+	</div> -->
 	<br>
 	<header>
 		<h1>
@@ -14,7 +20,12 @@
 	</header>
 	<section class="wonders">
 		<p>
-			New7Wonders of the World (2000–2007) was a campaign started in 2000 to choose Wonders of the World from a selection of 200 existing monuments. he popularity poll was led by Canadian-Swiss Bernard Weber and organized by the New7Wonders Foundation based in Zurich, Switzerland, with winners announced on 7 July 2007 in Lisbon.
+			New7Wonders of the World (2000–2007) was a campaign started in 2000 to choose Wonders of the World from
+			a
+			selection of 200 existing monuments. he popularity poll was led by Canadian-Swiss Bernard Weber and
+			organized by the New7Wonders Foundation based in Zurich, Switzerland, with winners announced on 7 July
+			2007
+			in Lisbon.
 		</p>
 	</section>
 	<div id="menu-outer">
@@ -24,8 +35,8 @@
 				<li><a class="wonders3" href="Projectb.html">Taj Mahal</a></li>
 				<li><a class="wonders3" href="Projectc.html">Petra</a></li>
 				<li><a class="wonders3" href="Projectd.html">Colosseum</a></li>
-				<li><a class="wonders3" href="Projecte.html">Great Wall of China</a></li>
-				<li><a class="wonders3" href="Projectf.html">Christ the Redeemer</a></li>
+				<li><a class="wonders2" href="Projecte.html">Great Wall of China</a></li>
+				<li><a class="wonders2" href="Projectf.html">Christ the Redeemer</a></li>
 				<li><a class="wonders3" href="Projectg.html">Machu Picchu</a></li>
 				<li><a class="wonders3" href="Projecth.html">Chichen Itza</a></li>
 			</ul>
@@ -33,4 +44,5 @@
 	</div>
 
 </body>
+
 </html>
